--- a/app/src/main/res/layout/menu_app.xml
+++ b/app/src/main/res/layout/menu_app.xml
@@ -6,26 +6,86 @@
     android:layout_height="match_parent"
     tools:context=".MenuApp">
 
-    <LinearLayout
-        android:layout_width="409dp"
-        android:layout_height="729dp"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp"
-        tools:ignore="MissingConstraints">
+    <ImageView
+        android:id="@+id/imageView14"
+        tools:srcCompat="@drawable/p1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/p1" />
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:text="hggfghgfhgfhgfh"
-            android:textSize="60sp"
-            android:visibility="visible" />
+    <ImageView
+        android:id="@+id/imageView15"
+        android:layout_width="79dp"
+        android:layout_height="64dp"
+        app:srcCompat="@drawable/baseline_home_24"
+        tools:layout_editor_absoluteX="174dp"
+        tools:layout_editor_absoluteY="157dp" />
 
-        <Button
-            android:id="@+id/btnCerrarSesion"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="CERRAR" />
-    </LinearLayout>
+    <ImageButton
+        android:id="@+id/btnUsuario"
+        android:layout_width="120dp"
+        android:layout_height="110dp"
+        android:layout_marginStart="34dp"
+        android:layout_marginTop="76dp"
+        android:layout_marginEnd="66dp"
+        android:backgroundTint="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnEncuestar"
+        app:layout_constraintTop_toBottomOf="@+id/imageView15"
+        app:srcCompat="@drawable/baseline_person_24" />
+
+    <ImageButton
+        android:id="@+id/btnInformacion"
+        android:layout_width="120dp"
+        android:layout_height="110dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="34dp"
+        android:backgroundTint="@color/white"
+        app:layout_constraintEnd_toStartOf="@+id/btnCerrarSesion"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnEncuestar"
+        app:srcCompat="@drawable/baseline_info_24" />
+
+    <ImageButton
+        android:id="@+id/btnEncuestar"
+        android:layout_width="120dp"
+        android:layout_height="110dp"
+        android:layout_marginStart="71dp"
+        android:layout_marginTop="76dp"
+        android:layout_marginEnd="16dp"
+        android:backgroundTint="@color/white"
+        app:layout_constraintEnd_toStartOf="@+id/btnUsuario"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView15"
+        app:srcCompat="@drawable/baseline_newspaper_24" />
+
+    <ImageButton
+        android:id="@+id/btnCerrarSesion"
+        android:layout_width="120dp"
+        android:layout_height="110dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="66dp"
+        android:backgroundTint="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/btnInformacion"
+        app:layout_constraintTop_toBottomOf="@+id/btnUsuario"
+        app:srcCompat="@drawable/baseline_exit_to_app_24" />
+
+    <ImageView
+        android:id="@+id/imageView13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/p2" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
