--- a/app/src/main/res/layout/inicio.xml
+++ b/app/src/main/res/layout/inicio.xml
@@ -23,7 +23,7 @@
         android:layout_marginStart="120dp"
         android:layout_marginTop="105dp"
         android:layout_marginEnd="120dp"
-        android:backgroundTint="@color/design_default_color_primary"
+        android:backgroundTint="@color/colorverde"
         android:fontFamily="@font/quicksand_bold"
         android:text="Iniciar sesión"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -38,8 +38,7 @@
         android:layout_marginStart="120dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="120dp"
-        android:layout_marginBottom="200dp"
-        android:backgroundTint="@color/design_default_color_primary"
+        android:backgroundTint="@color/colorverde"
         android:fontFamily="@font/quicksand_bold"
         android:text="Crear cuenta"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
