--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -79,13 +79,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="158dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="68dp"
         android:layout_marginEnd="151dp"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/colorverde"
         android:fontFamily="@font/quicksand_bold"
         android:text="Acceder"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/contrasenia" />
 
