--- a/app/src/main/res/layout/registrar_usuario.xml
+++ b/app/src/main/res/layout/registrar_usuario.xml
@@ -111,12 +111,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="146dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="147dp"
+        android:backgroundTint="#299916"
         android:fontFamily="@font/quicksand_bold"
         android:text="Registrar"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/contraseniaR" />
 
