--- a/app/src/main/res/layout/menu_app.xml
+++ b/app/src/main/res/layout/menu_app.xml
@@ -21,9 +21,13 @@
         android:id="@+id/imageView15"
         android:layout_width="79dp"
         android:layout_height="64dp"
-        app:srcCompat="@drawable/baseline_home_24"
-        tools:layout_editor_absoluteX="182dp"
-        tools:layout_editor_absoluteY="123dp" />
+        android:layout_marginStart="166dp"
+        android:layout_marginTop="33dp"
+        android:layout_marginEnd="166dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView14"
+        app:srcCompat="@drawable/baseline_home_24" />
 
     <ImageButton
         android:id="@+id/btnUsuario"
