--- a/app/src/main/res/layout/menu_app.xml
+++ b/app/src/main/res/layout/menu_app.xml
@@ -4,30 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:foregroundTint="#FFFFFF"
     tools:context=".MenuApp">
-
-    <ImageView
-        android:id="@+id/imageView14"
-        tools:srcCompat="@drawable/p1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/p1" />
 
     <ImageView
         android:id="@+id/imageView15"
         android:layout_width="79dp"
         android:layout_height="64dp"
         android:layout_marginStart="166dp"
-        android:layout_marginTop="33dp"
         android:layout_marginEnd="166dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView14"
-        app:srcCompat="@drawable/baseline_home_24" />
+        app:srcCompat="@drawable/baseline_home_24"
+        tools:layout_editor_absoluteY="82dp" />
 
     <ImageButton
         android:id="@+id/btnUsuario"
@@ -77,7 +67,7 @@
         android:text="Salir"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         tools:layout_editor_absoluteX="274dp"
-        tools:layout_editor_absoluteY="547dp" />
+        tools:layout_editor_absoluteY="506dp" />
 
     <TextView
         android:id="@+id/textView11"
@@ -87,7 +77,7 @@
         android:text="Acerca de"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         tools:layout_editor_absoluteX="79dp"
-        tools:layout_editor_absoluteY="547dp" />
+        tools:layout_editor_absoluteY="506dp" />
 
     <ImageButton
         android:id="@+id/btnInformacion"
@@ -102,16 +92,6 @@
         app:layout_constraintTop_toBottomOf="@+id/btnEncuestar"
         app:srcCompat="@drawable/baseline_info_24" />
 
-    <ImageView
-        android:id="@+id/imageView13"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/p2" />
-
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
@@ -120,7 +100,7 @@
         android:text="Perfil"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         tools:layout_editor_absoluteX="274dp"
-        tools:layout_editor_absoluteY="373dp" />
+        tools:layout_editor_absoluteY="332dp" />
 
     <TextView
         android:id="@+id/textView"
@@ -130,6 +110,6 @@
         android:text="Encuesta"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         tools:layout_editor_absoluteX="86dp"
-        tools:layout_editor_absoluteY="373dp" />
+        tools:layout_editor_absoluteY="332dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
