--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="colorverde">#299916</color>
+    <color name="verde2">#44A633</color>
+    <color name="verde3">#CAE6C5</color>
+    <color name="verde4">#94CC8B</color>
 </resources>
