--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -53,7 +53,8 @@
             android:fontFamily="@font/quicksand_bold"
             android:inputType="textEmailAddress"
             android:text="Correo"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="@color/black" />
 
         <EditText
             android:id="@+id/contrasenia"
@@ -66,7 +67,8 @@
             android:fontFamily="@font/quicksand_bold"
             android:inputType="textPassword"
             android:text="Contraseña"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="@color/black" />
 
         <Button
             android:id="@+id/btnIngresar"
