--- a/app/src/main/res/drawable/text_bord_menu.xml
+++ b/app/src/main/res/drawable/text_bord_menu.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+
     <item>
         <shape android:shape="rectangle">
             <solid android:color="#f1f1f3"/>
-            <corners android:topRightRadius="80sp" android:topLeftRadius="80sp"/>
+            <corners android:bottomRightRadius="80sp" android:bottomLeftRadius="80sp"/>
         </shape>
     </item>
 </selector>
