--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -17,7 +17,7 @@
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/mobile_login_pana" />
+        app:srcCompat="@drawable/img_login" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
