--- a/app/src/main/res/layout/menu_app.xml
+++ b/app/src/main/res/layout/menu_app.xml
@@ -4,53 +4,75 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:foregroundTint="#FFFFFF"
+    android:background="@color/verde4"
+    android:backgroundTint="@color/verde4"
+    android:foregroundTint="@color/verde4"
     tools:context=".MenuApp">
 
-    <ImageView
-        android:id="@+id/imageView15"
-        android:layout_width="79dp"
-        android:layout_height="64dp"
-        android:layout_marginStart="166dp"
-        android:layout_marginEnd="166dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/baseline_home_24"
-        tools:layout_editor_absoluteY="82dp" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="280sp"
+        android:background="@drawable/text_bord_menu">
+
+        <ImageView
+            android:id="@+id/imageView9"
+            android:layout_width="157dp"
+            android:layout_height="133dp"
+            android:layout_marginStart="127dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="127dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/se_survey_removebg_preview" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="115dp"
+            android:layout_marginEnd="115dp"
+            android:gravity="center"
+            android:text="SE Survey"
+            android:textColor="@color/colorverde"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView9" />
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="98dp"
+            android:layout_marginEnd="98dp"
+            android:text="Datos para tu seguridad"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageButton
         android:id="@+id/btnUsuario"
         android:layout_width="120dp"
         android:layout_height="110dp"
         android:layout_marginStart="34dp"
-        android:layout_marginTop="76dp"
         android:layout_marginEnd="66dp"
         android:backgroundTint="@color/colorverde"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnEncuestar"
-        app:layout_constraintTop_toBottomOf="@+id/imageView15"
-        app:srcCompat="@drawable/baseline_person_24" />
-
-    <ImageButton
-        android:id="@+id/btnEncuestar"
-        android:layout_width="120dp"
-        android:layout_height="110dp"
-        android:layout_marginStart="71dp"
-        android:layout_marginTop="76dp"
-        android:layout_marginEnd="16dp"
-        android:backgroundTint="@color/colorverde"
-        app:layout_constraintEnd_toStartOf="@+id/btnUsuario"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView15"
-        app:srcCompat="@drawable/baseline_newspaper_24" />
+        app:srcCompat="@drawable/baseline_person_24"
+        tools:layout_editor_absoluteY="386dp" />
 
     <ImageButton
         android:id="@+id/btnCerrarSesion"
         android:layout_width="120dp"
         android:layout_height="110dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="66dp"
         android:backgroundTint="@color/colorverde"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,32 +81,12 @@
         app:layout_constraintTop_toBottomOf="@+id/btnUsuario"
         app:srcCompat="@drawable/baseline_exit_to_app_24" />
 
-    <TextView
-        android:id="@+id/textView13"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/quicksand_bold"
-        android:text="Salir"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        tools:layout_editor_absoluteX="274dp"
-        tools:layout_editor_absoluteY="506dp" />
-
-    <TextView
-        android:id="@+id/textView11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/quicksand_bold"
-        android:text="Acerca de"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        tools:layout_editor_absoluteX="79dp"
-        tools:layout_editor_absoluteY="506dp" />
-
     <ImageButton
         android:id="@+id/btnInformacion"
         android:layout_width="120dp"
         android:layout_height="110dp"
         android:layout_marginStart="68dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="34dp"
         android:backgroundTint="@color/colorverde"
         app:layout_constraintEnd_toStartOf="@+id/btnCerrarSesion"
@@ -92,24 +94,16 @@
         app:layout_constraintTop_toBottomOf="@+id/btnEncuestar"
         app:srcCompat="@drawable/baseline_info_24" />
 
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/quicksand_bold"
-        android:text="Perfil"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        tools:layout_editor_absoluteX="274dp"
-        tools:layout_editor_absoluteY="332dp" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/quicksand_bold"
-        android:text="Encuesta"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        tools:layout_editor_absoluteX="86dp"
-        tools:layout_editor_absoluteY="332dp" />
+    <ImageButton
+        android:id="@+id/btnEncuestar"
+        android:layout_width="120dp"
+        android:layout_height="110dp"
+        android:layout_marginStart="71dp"
+        android:layout_marginEnd="16dp"
+        android:backgroundTint="@color/colorverde"
+        app:layout_constraintEnd_toStartOf="@+id/btnUsuario"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/baseline_newspaper_24"
+        tools:layout_editor_absoluteY="386dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
