--- a/app/src/main/res/layout/registrar_usuario.xml
+++ b/app/src/main/res/layout/registrar_usuario.xml
@@ -21,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="650sp"
         android:background="@drawable/text_bord"
+        android:elevation="30dp"
         android:padding="32sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -122,6 +123,7 @@
             android:backgroundTint="#299916"
             android:fontFamily="@font/quicksand_bold"
             android:text="Registrar"
+            android:elevation="30dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="#FFFFFF"
             app:layout_constraintEnd_toEndOf="parent"
