--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -24,6 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="600dp"
         android:background="@drawable/text_bord"
+        android:elevation="30dp"
         android:orientation="vertical"
         android:padding="32sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -80,6 +81,7 @@
             android:background="@drawable/button_border"
             android:backgroundTint="@color/colorverde"
             android:fontFamily="@font/quicksand_bold"
+            android:elevation="30dp"
             android:text="Acceder"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="#FFFFFF" />
