--- a/app/src/main/res/layout/menu_app.xml
+++ b/app/src/main/res/layout/menu_app.xml
@@ -10,9 +10,14 @@
     tools:context=".MenuApp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout2"
+        android:elevation="30dp"
         android:layout_width="match_parent"
-        android:layout_height="280sp"
-        android:background="@drawable/text_bord_menu">
+        android:layout_height="300sp"
+        android:background="@drawable/text_bord_menu"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/imageView9"
@@ -48,6 +53,7 @@
             android:layout_marginStart="98dp"
             android:layout_marginEnd="98dp"
             android:text="Datos para tu seguridad"
+            android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -59,51 +65,116 @@
         android:id="@+id/btnUsuario"
         android:layout_width="120dp"
         android:layout_height="110dp"
-        android:layout_marginStart="34dp"
-        android:layout_marginEnd="66dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="90dp"
+        android:layout_marginEnd="65dp"
+        android:background="@drawable/button_border"
         android:backgroundTint="@color/colorverde"
+        android:elevation="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnEncuestar"
-        app:srcCompat="@drawable/baseline_person_24"
-        tools:layout_editor_absoluteY="386dp" />
-
-    <ImageButton
-        android:id="@+id/btnCerrarSesion"
-        android:layout_width="120dp"
-        android:layout_height="110dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="66dp"
-        android:backgroundTint="@color/colorverde"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/btnInformacion"
-        app:layout_constraintTop_toBottomOf="@+id/btnUsuario"
-        app:srcCompat="@drawable/baseline_exit_to_app_24" />
-
-    <ImageButton
-        android:id="@+id/btnInformacion"
-        android:layout_width="120dp"
-        android:layout_height="110dp"
-        android:layout_marginStart="68dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="34dp"
-        android:backgroundTint="@color/colorverde"
-        app:layout_constraintEnd_toStartOf="@+id/btnCerrarSesion"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnEncuestar"
-        app:srcCompat="@drawable/baseline_info_24" />
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
+        app:srcCompat="@drawable/img_btn_perfil" />
 
     <ImageButton
         android:id="@+id/btnEncuestar"
         android:layout_width="120dp"
         android:layout_height="110dp"
-        android:layout_marginStart="71dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="65dp"
+        android:layout_marginTop="90dp"
+        android:layout_marginEnd="25dp"
+        android:background="@drawable/button_border"
         android:backgroundTint="@color/colorverde"
+        android:elevation="15dp"
         app:layout_constraintEnd_toStartOf="@+id/btnUsuario"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/baseline_newspaper_24"
-        tools:layout_editor_absoluteY="386dp" />
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
+        app:srcCompat="@drawable/img_btn_list" />
+
+    <ImageButton
+        android:id="@+id/btnCerrarSesion"
+        android:layout_width="120dp"
+        android:layout_height="110dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="65dp"
+        android:elevation="15dp"
+        android:background="@drawable/button_border"
+        android:backgroundTint="@color/colorverde"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnInformacion"
+        app:layout_constraintTop_toBottomOf="@+id/textView48"
+        app:srcCompat="@drawable/img_btn_salir" />
+
+    <ImageButton
+        android:id="@+id/btnInformacion"
+        android:layout_width="120dp"
+        android:layout_height="110dp"
+        android:layout_marginStart="65dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="25dp"
+        android:background="@drawable/button_border"
+        android:backgroundTint="@color/colorverde"
+        android:elevation="15dp"
+        app:layout_constraintEnd_toStartOf="@+id/btnCerrarSesion"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView16"
+        app:srcCompat="@drawable/img_btn_informacion" />
+
+    <TextView
+        android:id="@+id/textView16"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:elevation="15dp"
+        android:text="Encuesta"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/btnEncuestar"
+        app:layout_constraintStart_toStartOf="@+id/btnEncuestar"
+        app:layout_constraintTop_toBottomOf="@+id/btnEncuestar" />
+
+    <TextView
+        android:id="@+id/textView46"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:elevation="15dp"
+        android:text="Cerrar Sesión"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/btnCerrarSesion"
+        app:layout_constraintStart_toStartOf="@+id/btnCerrarSesion"
+        app:layout_constraintTop_toBottomOf="@+id/btnCerrarSesion" />
+
+    <TextView
+        android:id="@+id/textView47"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:elevation="15dp"
+        android:text="Información"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/btnInformacion"
+        app:layout_constraintStart_toStartOf="@+id/btnInformacion"
+        app:layout_constraintTop_toBottomOf="@+id/btnInformacion" />
+
+    <TextView
+        android:id="@+id/textView48"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:elevation="15dp"
+        android:text="Perfil"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/btnUsuario"
+        app:layout_constraintStart_toStartOf="@+id/btnUsuario"
+        app:layout_constraintTop_toBottomOf="@+id/btnUsuario" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
