--- a/app/src/main/res/layout/menu_app.xml
+++ b/app/src/main/res/layout/menu_app.xml
@@ -29,7 +29,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/se_survey_removebg_preview" />
+            app:srcCompat="@drawable/img_se_survey" />
 
         <TextView
             android:id="@+id/textView"
