--- a/app/src/main/res/layout/perfil.xml
+++ b/app/src/main/res/layout/perfil.xml
@@ -118,7 +118,7 @@
                 android:textSize="20sp" />
 
             <TextView
-                android:id="@+id/textView49"
+                android:id="@+id/textView549"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -141,7 +141,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView45"
+                android:id="@+id/textView545"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -150,7 +150,7 @@
                 android:textSize="20sp" />
 
             <TextView
-                android:id="@+id/textView49"
+                android:id="@+id/textView449"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -173,7 +173,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView45"
+                android:id="@+id/textView445"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -195,7 +195,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button554"
         android:layout_width="349dp"
         android:layout_height="65dp"
         android:background="@drawable/button_border"
