--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="verde2">#44A633</color>
     <color name="verde3">#CAE6C5</color>
     <color name="verde4">#94CC8B</color>
+    <color name="verde5">#CAE6C5</color>
 </resources>
