--- a/app/src/main/res/layout/perfil.xml
+++ b/app/src/main/res/layout/perfil.xml
@@ -46,6 +46,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="347dp"
         android:layout_height="408dp"
         android:layout_marginTop="-30dp"
@@ -198,6 +199,9 @@
         android:id="@+id/button"
         android:layout_width="349dp"
         android:layout_height="65dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="30dp"
         android:background="@drawable/button_border"
         android:backgroundTint="@color/verde4"
         android:elevation="30dp"
@@ -205,7 +209,8 @@
         android:text="Editar Perfil"
         android:textColor="@color/black"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="30dp"
-        tools:layout_editor_absoluteY="755dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
