--- a/app/src/main/res/layout/perfil.xml
+++ b/app/src/main/res/layout/perfil.xml
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="lcgaibor@espe.edu.ec"
+            android:hint=""
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -83,7 +83,7 @@
                 android:layout_height="74dp"
                 android:background="@drawable/text_bord_circle"
                 android:gravity="center"
-                android:text="10"
+                android:text=""
                 android:textColor="@color/black"
                 android:textSize="30sp"
                 android:textStyle="bold"
@@ -122,7 +122,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Lesly"
+                android:text=""
                 android:textAlignment="textEnd"
                 android:textColor="@color/black"
                 android:textSize="20sp" />
@@ -154,7 +154,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Gaibor"
+                android:text=""
                 android:textAlignment="textEnd"
                 android:textColor="@color/black"
                 android:textSize="20sp" />
@@ -194,7 +194,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
-                    android:text="Cambiar"
+                    android:text=""
                     android:textAlignment="textEnd"
                     android:textColor="@color/black"
                     android:textSize="20sp" />
