validaciones encuesta y control login

--- a/app/src/main/res/layout/encuesta.xml
+++ b/app/src/main/res/layout/encuesta.xml
@@ -102,6 +102,7 @@
                             android:layout_margin="10sp"
                             android:ems="10"
                             android:hint="Cédula"
+                            android:maxLength="10"
                             android:inputType="number"
                             android:textColor="@color/black"
                             android:textSize="20sp" />
@@ -113,6 +114,7 @@
                             android:layout_margin="10sp"
                             android:ems="10"
                             android:hint="Teléfono"
+                            android:maxLength="10"
                             android:inputType="phone"
                             android:textColor="@color/black"
                             android:textSize="20sp" />
@@ -134,6 +136,7 @@
                             android:layout_height="wrap_content"
                             android:layout_margin="10sp"
                             android:ems="10"
+                            android:maxLength="10"
                             android:hint="Fecha de Nacimiento"
                             android:inputType="date"
                             android:textColor="@color/black"
